--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+.env
 
 # macOS
 .DS_Store
@@ -19,5 +20,5 @@ web-build/
 expo-env.d.ts
 # @end expo-cli
 
-# configurations
-configs/
+# extra
+info.MD
