--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-router": "~3.5.17",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -37,7 +38,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
