--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "firebase": "^10.12.5",
     "i18next": "^23.16.2",
     "lottie-react-native": "6.7.0",
+    "radon-ide": "^0.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^15.1.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "2.5.6",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
