--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "date-fns": "^4.1.0",
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
@@ -36,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^15.1.0",
     "react-native": "0.74.3",
+    "react-native-calendar-picker": "^8.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "2.5.6",
     "react-native-reanimated": "~3.10.1",
@@ -49,6 +51,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
