--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.62.7",
     "date-fns": "^4.1.0",
     "expo": "~51.0.18",
     "expo-constants": "~16.0.2",
@@ -32,6 +33,7 @@
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.12.5",
     "i18next": "^23.16.2",
+    "ky": "^1.7.3",
     "lottie-react-native": "6.7.0",
     "radon-ide": "^0.0.1",
     "react": "18.2.0",
