--- a/package.json
+++ b/package.json
@@ -21,39 +21,39 @@
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.62.7",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.18",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-router": "~3.5.17",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.18",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-linking": "~7.0.3",
+    "expo-localization": "~16.0.0",
+    "expo-router": "4.0.11",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
     "firebase": "^10.12.5",
     "i18next": "^23.16.2",
     "ky": "^1.7.3",
-    "lottie-react-native": "6.7.0",
+    "lottie-react-native": "7.1.0",
     "radon-ide": "^0.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^15.1.0",
-    "react-native": "0.74.3",
+    "react-native": "0.76.5",
     "react-native-calendar-picker": "^8.0.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "2.5.6",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native-calendar-picker": "^8.0.0",
     "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -67,7 +67,7 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.2",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
