--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next": "^23.16.2",
     "ky": "^1.7.3",
     "lottie-react-native": "7.1.0",
+    "nanoid": "^5.0.9",
     "radon-ide": "^0.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
