--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native": "0.76.5",
     "react-native-calendar-picker": "^8.0.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "2.5.6",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
