--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.62.7",
+    "commitlint": "^19.7.1",
+    "cspell": "^8.17.5",
     "date-fns": "^4.1.0",
     "expo": "^52.0.18",
     "expo-constants": "~17.0.3",
@@ -56,7 +58,9 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@arkweid/lefthook": "^0.7.7",
     "@babel/core": "^7.20.0",
+    "@commitlint/config-conventional": "^19.7.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native-calendar-picker": "^8.0.0",
