--- a/app.json
+++ b/app.json
@@ -14,9 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.example.travelplanner"
+      "bundleIdentifier": "com.app.travelplanner"
     },
     "android": {
+      "package": "com.app.travelplanner",
       "adaptiveIcon": {
         "foregroundImage": "./ui/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -27,11 +28,7 @@
       "output": "static",
       "favicon": "./ui/assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-localization",
-      "expo-font"
-    ],
+    "plugins": ["expo-router", "expo-localization", "expo-font"],
     "experiments": {
       "typedRoutes": true
     },
