--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,24 @@
 
 version: 2
 updates:
-  - package-ecosystem: 'npm' # See documentation for possible values
+  # Project dependencies
+  - package-ecosystem: 'npm'
     directory: '/' # Location of package manifests
     schedule:
       interval: 'weekly'
+    open-pull-requests-limit: 10
+    groups:
+      dependencies:
+        patterns:
+          - "*"
+  
+  # GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 10
+    groups:
+      dependencies:
+        patterns:
+          - "*"
