--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
+    "ts-pattern": "^5.6.2",
     "tsyringe": "^4.8.0",
     "zustand": "^5.0.0"
   },
