--- a/app.json
+++ b/app.json
@@ -14,10 +14,12 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.app.travelplanner"
+      "bundleIdentifier": "com.app.travelplanner",
+      "googleServicesFile": "./ios/GoogleService-Info.plist"
     },
     "android": {
       "package": "com.app.travelplanner",
+      "googleServicesFile": "./android/google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./ui/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -28,7 +30,21 @@
       "output": "static",
       "favicon": "./ui/assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-localization", "expo-font"],
+    "plugins": [
+      "expo-router",
+      "expo-localization",
+      "expo-font",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
+      ],
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth"
+    ],
     "experiments": {
       "typedRoutes": true
     },
