--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/auth": "^21.13.0",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.62.7",
     "commitlint": "^19.7.1",
     "cspell": "^8.17.5",
     "date-fns": "^4.1.0",
     "expo": "^52.0.18",
+    "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.1",
