--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^10.12.5",
     "i18next": "^23.16.2",
+    "immer": "^10.1.1",
     "ky": "^1.7.3",
     "lottie-react-native": "7.1.0",
     "nanoid": "^5.0.9",
@@ -54,6 +55,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "2.5.6",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
