--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-native-web": "~0.19.13",
     "ts-pattern": "^5.6.2",
     "tsyringe": "^4.8.0",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "expo-linear-gradient": "~14.0.2"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
