--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
-    "expo-router": "4.0.11",
+    "expo-router": "4.0.20",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
@@ -63,8 +64,7 @@
     "react-native-web": "~0.19.13",
     "ts-pattern": "^5.6.2",
     "tsyringe": "^4.8.0",
-    "zustand": "^5.0.0",
-    "expo-linear-gradient": "~14.0.2"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
