--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,11 +45,6 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: npm
 
-      - name: Create Firebase config files
-        run: |
-          echo "${{ secrets.FIREBASE_ANDROID_CONFIG }}" | base64 --decode > google-services.json
-          echo "${{ secrets.FIREBASE_IOS_CONFIG }}" | base64 --decode > GoogleService-Info.plist
-
       - name: Setup Java 17
         uses: actions/setup-java@v3
         with:
@@ -65,6 +60,13 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Create Firebase config files
+        run: |
+          mkdir -p android/app
+          echo "${{ secrets.FIREBASE_ANDROID_CONFIG }}" | base64 --decode > android/app/google-services.json
+          mkdir -p ios
+          echo "${{ secrets.FIREBASE_IOS_CONFIG }}" | base64 --decode > ios/GoogleService-Info.plist
 
       - name: Build app
         # env:
