--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,14 +63,25 @@ jobs:
 
       - name: Create Firebase config files
         run: |
+          # Create the Firebase config files in project root
           echo "${{ secrets.FIREBASE_ANDROID_CONFIG }}" | base64 --decode > google-services.json
           echo "${{ secrets.FIREBASE_IOS_CONFIG }}" | base64 --decode > GoogleService-Info.plist
+
+          # Create standard platform directories and copy files there as well
+          mkdir -p android/app
+          cp google-services.json android/app/
+          mkdir -p ios
+          cp GoogleService-Info.plist ios/
 
       - name: Build app
         # env:
         #   SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
         #   EXPO_PUBLIC_MMKV_ENCRYPTION_KEY: ${{ secrets.MMKV_ENCRYPTION_KEY }}
         run: |
+          # Create a prebuild first to ensure files are in the right place
+          npx expo prebuild --clean --platform=${{ github.event.inputs.platform || 'android' }}
+
+          # Then do the actual build
           eas build --local \
             --non-interactive \
             --output=./app-build \
