--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,15 +61,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Putting data
-        env:
-          DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: |
-          mkdir -p /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app
-          echo "$DATA" > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
-          ls -la /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/
-          cat /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
-
       - name: Build app
         # env:
         #   SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
@@ -80,6 +71,11 @@ jobs:
         run: |
           # Create a prebuild first to ensure files are in the right place
           npx expo prebuild --clean --platform=${{ github.event.inputs.platform || 'android' }}
+
+          # Create google-services.json after prebuild
+          mkdir -p /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app
+          echo "$GOOGLE_SERVICES_JSON" > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
+          ls -la /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/
 
           # Then do the actual build
           eas build --local \
