--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
 
           # Create google-services.json after prebuild
           mkdir -p /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app
-          echo "$GOOGLE_SERVICES_JSON" > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
           ls -la /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/
 
           # Then do the actual build
