--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
         run: |
           # Create google-services.json
           mkdir -p /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app
-          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | jq '.' > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
           ls -la /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/
 
           # Do the build
