--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,9 +69,9 @@ jobs:
           GOOGLE_SERVICES_JSON: /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
           GOOGLE_SERVICES_PLIST: ${{ secrets.GOOGLE_SERVICES_PLIST }}
         run: |
-          # Create google-services.json
+          # Create google-services.json from base64
           mkdir -p /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app
-          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | jq '.' > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" | base64 -d > /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/google-services.json
           ls -la /home/runner/work/ai-travel-planner-app/ai-travel-planner-app/android/app/
 
           # Do the build
