fix: folder structure

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,7 +79,8 @@ jobs:
             --non-interactive \
             --output=./app-build \
             --platform=${{ github.event.inputs.platform  || 'android' }} \
-            --profile=${{ github.event.inputs.profile || 'test' }}
+            --profile=${{ github.event.inputs.profile || 'test' }} \
+            --type=apk
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
