--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/core": "^9.2.2",
     "@expo/vector-icons": "^14.0.2",
     "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -61,6 +63,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "ts-pattern": "^5.6.2",
