--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cspell": "^8.17.5",
     "date-fns": "^4.1.0",
     "expo": "^52.0.18",
+    "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.12",
@@ -60,7 +61,7 @@
     "react-native-google-places-autocomplete": "2.5.6",
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
@@ -68,8 +69,7 @@
     "react-native-web": "~0.19.13",
     "ts-pattern": "^5.6.2",
     "tsyringe": "^4.8.0",
-    "zustand": "^5.0.0",
-    "expo-blur": "~14.0.3"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
