--- a/package.json
+++ b/package.json
@@ -61,10 +61,10 @@
     "react-native-google-places-autocomplete": "2.5.6",
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "^3.17.5",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "15.8.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "ts-pattern": "^5.6.2",
