--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,12 @@
-EXPO_PUBLIC_FIREBASE_API_KEY=
-EXPO_PUBLIC_FIREBASE_AUTH_DOMAIN=
-EXPO_PUBLIC_FIREBASE_PROJECT_ID=
-EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=
-EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
-EXPO_PUBLIC_FIREBASE_APP_ID=
-EXPO_PUBLIC_GOOGLE_PLACES_API_KEY=
-EXPO_PUBLIC_GOOGLE_GEMINI_API_KEY=
-EXPO_PUBLIC_RAPID_API_KEY=
-EXPO_PUBLIC_UNSPLASH_ACCESS_KEY=
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
+GOOGLE_PLACES_API_KEY=
+GOOGLE_GEMINI_API_KEY=
+RAPID_API_KEY=
+UNSPLASH_ACCESS_KEY=
+GOOGLE_SERVICES_PLIST_LOCAL_PATH=
+GOOGLE_SERVICES_JSON_LOCAL_PATH=
