--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "react-native-web": "~0.19.13",
     "ts-pattern": "^5.6.2",
     "tsyringe": "^4.8.0",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.0",
+    "react-native-maps": "1.20.1"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
