--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/auth": "^21.13.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.62.7",
     "ai": "^4.3.15",
@@ -36,6 +37,7 @@
     "expo-blur": "~14.0.3",
     "expo-build-properties": "^0.13.2",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.2",
     "expo-dev-client": "~5.0.12",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.1",
@@ -63,6 +65,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "2.5.6",
     "react-native-keyboard-controller": "^1.17.1",
+    "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -72,9 +75,7 @@
     "react-native-web": "~0.19.13",
     "ts-pattern": "^5.6.2",
     "tsyringe": "^4.8.0",
-    "zustand": "^5.0.0",
-    "react-native-maps": "1.20.1",
-    "expo-crypto": "~14.0.2"
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
